--- a/server/static/frontend/index.html
+++ b/server/static/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/static/frontend/assets/logo.Buz3rqNi.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR Code Attendance</title>
-    <script type="module" crossorigin src="/static/frontend/assets/main._csF98qg.js"></script>
+    <script type="module" crossorigin src="/static/frontend/assets/main.R4OWzCMX.js"></script>
     <link rel="stylesheet" crossorigin href="/static/frontend/assets/main.XuAEiUhh.css">
   </head>
   <body>
