--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QR Code Attendance</title>
+    <title>Chatbot</title>
     <script type="module" src="/src/main.tsx" defer></script>
   </head>
   <body>
